--- a/style1234.css
+++ b/style1234.css
@@ -5,6 +5,9 @@
   font-weight: 400;
   font-style: normal;
 }
+main > section {
+  margin-top: 130px;
+}
 /* shared style */
 .display-flex{
   display: flex;
@@ -60,6 +63,26 @@
 }
 .banner-pic{
   width: 100%;
+}
+.teams{
+  align-items: center;
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.feature{
+  margin-left: 73px;
+  max-width: 537px;
+}
+.feature-title{
+  font-size: 2.8rem;
+  font-weight: bold;
+}
+#text-style{
+  font-weight: 500;
+  
 }
 /* responsive media query */
 @media screen and (max-width: 576px) {
