--- a/style123456.css
+++ b/style123456.css
@@ -27,6 +27,10 @@ main > section {
   font-size: 1.25rem;
   font-weight: 500px;
 }
+.section-title{
+  font-size: 2.8rem;
+  font-weight: bold;
+}
 /* header */
 .bg-light{
   background-color: rgba(255, 144, 14, 0.1);
@@ -72,21 +76,67 @@ main > section {
   grid-template-columns: repeat(2, 1fr);
   gap: 24px;
 }
-.feature{
+.features{
   margin-left: 73px;
   max-width: 537px;
-}
-.feature-title{
-  font-size: 2.8rem;
-  font-weight: bold;
 }
 #text-style{
   font-weight: 500;
   
 }
+.feature-color{
+  color: rgba(255, 144, 14, 1);
+}
+.feature-des{
+  font-size: 1rem;
+  font-weight: 400;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-links {
+  .navbar, .nav-links, .teams{
     flex-direction: column;
+  }
+  .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .features{
+    margin-left: 20px;
+  }
+}
+/* section-2 */
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+  border: 1px solid rgba(255, 144, 14, 1);
+  border-radius: 0.5rem;
+  width: 241.83px;
+  height: 241.83px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.fact-dis{
+  max-width: 540px;
+}
+/* responsive-medium-device */
+@media screen and (min-width: 576px) and (max-width:992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .features{
+    margin: 50px auto;
   }
 }
