--- a/style123456789.css
+++ b/style123456789.css
@@ -68,13 +68,13 @@ main > section {
 .banner-pic{
   width: 100%;
 }
-/* section1 */
+/* section-1 */
 .team-img-container{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 24px;
 }
-.teams{
+.section-1{
   align-items: center;
 }
 .features{
@@ -92,6 +92,33 @@ main > section {
   font-weight: 400;
 }
 /* section-2 */
+.section-2{
+  gap: 146px;
+}
+.sec-2-card{
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+}
+#sec-2-title{
+  border-left: 5px solid rgba(255, 144, 14, 1);
+  padding: 21px;
+}
+.sec-2-title .card-title{
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+#experience-badge{
+  padding: 45px 42px;
+  margin-left: -102px;
+  margin-top: -100px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 600;
+}
+/* section-3 */
 .facts-container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -119,7 +146,7 @@ main > section {
 .fact-dis{
   max-width: 540px;
 }
-/* section3 */
+/* section-4 */
 .sec-3-div{
   margin: 30px auto;
   max-width: 542px;
@@ -134,11 +161,12 @@ main > section {
 }
 /* responsive-medium-device */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-links, .teams{
+  .navbar, .nav-links, .section-1{
     flex-direction: column;
   }
   .team-img-container,
   .facts-container,
+  .section-2,
   .sec-3-div-2
   {
     grid-template-columns: repeat(1, 1fr);
@@ -156,7 +184,7 @@ main > section {
   }
 }
 @media screen and (min-width: 576px) and (max-width:992px) {
-  .teams{
+  .section-1{
     flex-direction: column;
   }
   .features{
